--- a/Notes/20210410a Systems Biology - Dynamic systems W3.Rmd
+++ b/Notes/20210410a Systems Biology - Dynamic systems W3.Rmd
@@ -16,12 +16,12 @@ library(Ryacas0)
 
 ```{r}
 yini = c(A = 100, As = 0)
-kp = 1; km = 0.1
+kp = 1; km = 0.3
 
 mich = function(t, y, parms) {
   with(as.list(y), {
-    dA = km * As - kp * A
-    dAs = kp * A - km * As
+    dA = km * As - kp * (100-As)
+    dAs = kp * (100-As) - km * As
     list(c(dA, dAs))
   })
 }
@@ -36,13 +36,35 @@ out
 ```
 
 ```{r}
-# so what is the "steady-state"?
+deriv_data = function(y,t) {
+  dy = y[-1]-y[-length(y)]
+  dt = t[2]-t[1]
+  dydt = dy/dt
+  return(dydt)
+}
+```
 
-dA = yacas(expression(dA = km * As - kp * A))
-dAs = yacas(expression(kp * A - km * As))
-km = Sym("km"); kp = Sym("kp"); A = Sym("A"); As = Sym("As")
-Eval(dA, list(km = 0.5, kp = 1, A = out[200,2], As = out[200,3])) # BR at steady states
-Eval(dAs, list(km = 0.5, kp = 1, A = out[200,2], As = out[200,3])) # FR at steady states
+```{r}
+# Solving the equation graphically
+
+dydt_As = deriv_data(out[,3],out[,1])
+dydt_A = deriv_data(out[,2],out[,1])
+plot(dydt_As~out[-1,3], xlim = c(0,100))
+lines(dydt_A~out[-1,3])
+```
+
+### Finding the solution graphically
+
+```{r}
+FR = function(As) {kp * (100-As)}
+BR = function(As) {km * As}
+Solve(kp * (100-As) == km * As, As)
+FR(100/1.3)
+BR(100/1.3)
+```
+
+```{r}
+plot((1:100)/100,FR(1:100));lines((1:100)/100, BR(1:100))
 ```
 
 
@@ -54,8 +76,8 @@ km = 0.5
 
 mich = function(t, y, parms) {
   with(as.list(y), {
-    dA = km * As - kp * A
-    dAs = kp * A - km * As
+    dA = km * As - kp * (100-As)
+    dAs = kp * (100-As) - km * As
     list(c(dA, dAs))
   })
 }
@@ -76,13 +98,13 @@ plot(1:100,As_steady)
 
 ```{r}
 yini = c(A = 100, As = 0)
-kp = 1; km = 0.1; kf = 0.5
+kp = 1; km = 0.3; kf = 0.5
 
 
 mich = function(t, y, parms) {
   with(as.list(y), {
-    dA = km * As - kp * A - kf * A
-    dAs = kp * A - km * As + kf * A
+    dA =  km * As - (kp * (100-As) + kf * (100-As) * (100-As))
+    dAs = kp * (100-As) + kf * (100-As) * (100-As) - km * As
     list(c(dA, dAs))
   })
 }
@@ -94,4 +116,39 @@ out <- ode(y = yini, times = times, func = mich, parms = NULL)
 plot(out) # this looks unstable
 ```
 
+
+### Michaelian system with ultrasensitive feedback
+
+```{r}
+yini = c(A = 100, As = 0)
+kp = 0.3; km = 1.5; kf = 0.1
+kmf = 0.1; n = 3
+
+
+mich = function(t, y, parms) {
+  with(as.list(y), {
+    dA =  km * As - ((kp + kf * (As^n/(As^n + kmf^n))) * (100-As))
+    dAs = (kp + kf * (As^n/(As^n + kmf^n))) * (100-As) - km * As
+    list(c(dA, dAs))
+  })
+}
+
+times = seq(0,10,0.05)
+
+out <- ode(y = yini, times = times, func = mich, parms = NULL)
+
+plot(out) 
+```
+
+
+### Linear feedback plus saturating back reaction
+
+```{r}
+kmb = 3
+FR = function(As) {(kp + kf * As) * (100 - As)}
+BR = function(As) {km * (As / (As + kmb)) * (100-As)}
+plot(1:100,FR(1:100));lines(1:100,BR(1:100))
+
+plot(BR(1:100))
+```
 
